...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15dp"
                    >

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:textSize="22sp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Caroline"
...
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#F4F5F5"
        app:borderWidth="0dp"
        app:layout_anchorGravity="bottom|end"
...
